# dj

./: todos.md
app/django-polls/: README.rst  setup.cfg
app/django-polls/docs/: README.md
app/django-polls/polls/: models.py  tests.py
app/django-polls/polls/templates/polls/: detail.html
app/mysite/mysite/: settings.py
app/mysite/polls/: admin.py  models.py  tests.py  urls.py  views.py
app/mysite/polls/migrations/: 0001_initial.py
app/mysite/polls/static/polls/: style.css
base-dj-3.2/: changes-detected.md
base-dj-3.2/01-getting-started/01-overview/: README.md
base-dj-3.2/01-getting-started/02-writing-first-app/01-part-1-project-paths/: README.md
base-dj-3.2/01-getting-started/02-writing-first-app/03-views-templates/: README.md
base-dj-3.2/01-getting-started/02-writing-first-app/04-forms-genericViews/: README.md
base-dj-3.2/01-getting-started/03-writing-reusable-app/: README.md
base-dj-3.2/01-getting-started/04-first-patch-for-django/: README.md
base-dj-3.2/02-using-django/01-installation/: README.md
base-dj-3.2/02-using-django/03-handling-http-request/: 01-url-dispatcher.md
base-dj-4.0/: changes-detected.md
base-dj-4.0/01-getting-started/03-writing-reusable-app/: README.md
base-dj-4.0/01-getting-started/04-first-patch-for-django/: README.md
base-dj-4.0/02-using-django/02-models-databases/: 01-models.md  02-making-query.md  03-aggregations.md
base-dj-4.0/02-using-django/03-handling-http-request/: 02-writing-views.md  03-view-decorators.md  04-file-uploads.md  05-django-shortcut-functions.md  06-middleware.md
(+7 files in other folders)
